bootstrap/backstage-ingress.yaml
---
# Ingress para acessar Backstage via backstage.matheus.me
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage-ingress
  namespace: backstage
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: backstage.matheus.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backstage
            port:
              number: 7007
